<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- 消息盒 -->
    <string name="message_box">消息盒</string>
    <string name="normal">普通</string>
    <string name="safe">安全</string>
    <string name="clear_all">清空</string>
    <string name="my">我</string>
    <string name="been_answered">已接听</string>
    <string name="no_answered">未接听</string>
    <string name="but_come">点击加入</string>
    <string name="but_check">点击查看</string>
    <string name="look_you">观看了您</string>
    <string name="call_you">呼叫了您</string>
    <string name="invite_talk">发起了群聊</string>
    <string name="invite_meetting">发起了会议</string>
    <string name="invite_talk_over">群聊结束</string>
    <string name="invite_meetting_over">会议结束</string>
    <string name="str_today">今天</string>
    <string name="str_tomorrow">明天</string>
    <string name="call_urgency">紧急呼叫</string>
    <string name="call_urgency_you">了您！</string>
    <string name="post_pic_do">上传了</string>
    <string name="post_pic">张照片</string>
    <string name="phone_manager">接管成为本机的管理员</string>
    <string name="join_family">加入了您的家庭组</string>
    <string name="exit_family">退出了您的家庭组</string>
    <string name="distance_setting">通过远程设置管理修改了您的设置</string>
    <string name="release_family">解散了家庭组</string>
    <string name="been_manager">绑定成为管理员</string>
    <string name="look_photo">查看了照片</string>
    <string name="wrong_pic_do">抓拍到</string>
    <string name="wrong_pic">异常照片</string>
    <string name="wrong_video_do">录制到</string>
    <string name="wrong_video">段异常视频</string>
    <string name="app_name">海豚</string>
    <string name="app_album">相册</string>
    <string name="app_audio">语音助手</string>
    <string name="app_message">资讯</string>
    <string name="app_contact">联系人</string>
    <string name="app_setting">设置</string>
    <string name="app_sa">看家助手</string>
    <string name="title_activity_clock">ClockActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="hangup">挂断</string>
    <string name="calling">呼叫中&#8230;</string>
    <string name="monitoring">正在观看您&#8230;</string>
    <string name="accept">接听</string>
    <string name="isDel">确定删除全部消息？</string>
    <string name="invite">邀请</string>
    <string name="invitegroup">邀请您加入群聊</string>
    <string name="invitemeeting">邀请您加入会议</string>
    <string name="invitechat">请求与您通话</string>
    <string name="menu">菜单</string>
    <string name="disable_mirc">全部禁言</string>
    <string name="over">结束</string>
    <string name="phone_net">客户电话：400-XXX-XXXX \n海豚官网:www.dolphin.com</string>
    <string name="more_bind">绑定海豚</string>
    <string name="more_add">添加成员</string>
    <string name="more_groupchat">发起群聊</string>
    <string name="more_meeting">发起会议</string>
    <string name="action_more">快捷功能</string>
    <string name="choose_contact">选择联系人：</string>
    <string name="choosed">已选:</string>
    <string name="cancel">取消</string>
    <string name="confirm">确认</string>
    <string name="add_member">添加成员</string>
    <string name="dolphin_url">www.baidu.com</string>
    <string name="bind_dolphin">绑定海豚</string>
    <string name="dolphin_number">海豚号: %1$s</string>
    <string name="bind_step">三步设置好海豚 </string>
    <string name="first_step">第一步：下载手机客户端</string>
    <string name="first_step_scan">扫描二维码下载</string>
    <string name="first_step_download">或登录www.dolphin.com进行下载</string>
    <string name="second_step">第二步：绑定海豚</string>
    <string name="second_step_info">注册并登录手机客户端，在新的联系人中输入并搜索本机海豚号，完成绑定</string>
    <string name="dolphin_prompt">首次绑定的手机用户将成为管理员</string>
    <string name="bind_request_be_manager">请求成为管理员</string>
    <string name="bind_accept">接受</string>
    <string name="bind_refused">拒绝</string>
    <string name="binvite">邀请你加入</string>
    <string name="no_watch">禁止观看</string>
    <string name="no_network">没有网络</string>
    <string name="no_RTCnetwork">未连接服务器</string>
    <string name="login_processing">登录中&#8230;</string>
     <string name="current_meeting_cnt">当前人数：0</string>
	<string name="wifi_1">信号极强</string>
	<string name="wifi_2">信号较强</string>
	<string name="wifi_3">信号强</string>
	<string name="wifi_4">信号较弱</string>
	<string name="wifi_5">信号极弱</string>
	<string name="wifi_0">没有信号</string>
	<string name="fail_metting">会议创建失败:</string>
	<string name="fail_screen">截屏失败</string>
	<string name="vedio_recording">视频录制中，请先关闭</string>
	<string name="chat">聊天</string>
	<string name="vedio_recording_success">截图成功，并上传至聊天相册</string>
	<string name="fail_upload_picture">上传至聊天相册失败</string>
	<string name="fail_upload_chat_picture">上传至聊天相册失败</string>
	<string name="invite_join">邀请加入</string>
	<string name="group_chat">群聊</string>
	<string name="meetting">会议</string>
	<string name="no_loaded">未登陆，不能发起通话</string>
	<string name="no_online">对方不在线，无法通话</string>
    <string name="offline_callphone">对方离线，转呼叫电话</string>
	<string name="voip_calling">与他通话中</string>
	<string name="fail_get_members">获取成员列表失败:</string>
	<string name="now">当前：</string>
	<string name="close_group_success">关闭群组成功</string>
	<string name="close_group_fail">关闭群组失败</string>
	<string name="creat_alive_param_null">创建现场直播失败参数为空</string>
	<string name="creat_meeting_success">视频会议创建成功</string>
	<string name="creat_meeting_fail">视频会议创建失败</string>
	<string name="forbid_talking">全部禁言</string>
	<string name="cancel_forbid_talking">取消禁言</string>
	
	<string name="group_chat_over">群聊已结束</string>
	<string name="group_meetting_over">会议已结束</string>
	<string name="watch">:观看</string>
	<string name="wait">等</string>
	<string name="beenEnd">已结束</string>
	<string name="watching">人观看中</string>
	<string name="cannot_group_chat">未登陆，不能发起群聊</string>
	<string name="cannot_meetting">未登陆，不能发起会议</string>
	<string name="been_add">已经添加</string>
	<string name="cannot_invite_self">不能邀请自己</string>
	<string name="cannot_move">通话成员不能移除</string>
	<string name="cannot_connect_net">连接不到网络</string>
	<string name="my_home">我的家</string>
	<string name="net_not_stablable">网络不稳定</string>
	<string name="screen_shot">截屏</string>
	<string name="make_vedio">录制</string>
	<string name="no_sound">静音</string>
	<string name="loading_fail">登陆失败,sdk初始化失败！</string>
	<string name="register_ok"> 注册成功</string>
	<string name="loading_on_other_device">该账号在其他终端类型登陆</string>
	<string name="hang_out">挂断</string>
	<string name="recieve_message_ok">接收消息成功：</string>
	<string name="send_message">发送消息：</string>
	<string name="year">年</string>
	<string name="month">月</string>
	<string name="day">日</string>
	<string name="week">星期</string>
	<string name="week_day">日一二三四五六</string>
	<string name="auto_invite">有会议邀请自动加入</string>
	<string name="create_meetting_ok">会议创建成功</string>
	<string name="send_null">dolphinSendIm 发送对象字符串为null或为空</string>
	<string name="out_and_connect">连接已断开正在登陆中</string>
	<string name="join_fail">加入失败</string>
	<string name="close_chat">关闭会话</string>
	<string name="today">今天:</string>
	<string name="tomorrow">明天</string>
	<string name="yearMonthDay">yyyy年MM月dd日</string>
	<string name="yearMonthDayBegin">1900年1月31日</string>
	<string name="ten">初十</string>
	
	<string name="input_error">输入有误</string>
	<string name="usernotexist">用户不存在</string>
	<string name="invite_sent">邀请已发送</string>
	<string name="input_num">请输入海豚号/手机号</string>
	
	
	<string name="empty"></string>
	<string name="clear_empty">清空</string>
    <string name="iknow">知道了</string>
    <string name="kickout_notify">下线通知</string>
    <string name="kickout_content">你的帐号被踢出下线，请确定帐号信息安全</string>
    <string name="ok">确定</string>
    <string name="register_succ">注册成功</string>
    <string name="registering">注册中\u2026</string>
    <string name="register_failed">注册失败,错误码%1$s:%2$s</string>
    <string name="login_failed">帐号或密码错误</string>
    <string name="logining">登录中\u2026</string>
    <string name="login_succ">登陆成功</string>
    <string name="network_is_not_available">网络不可用</string>
    
    
    <!-- team -->
    <string name="over_team_capacity">创建失败，创建群数量达到限制</string>
    <string name="create_team_failed">创建失败</string>
    <string name="create_team_success">创建成功</string>
    <string name="over_team_member_capacity">邀请失败，成员人数上限为%1$d人</string>
	
</resources>