<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <SurfaceView
        android:id="@+id/capture_preview"
        android:layout_width="1.0dp"
        android:layout_height="1.0dp" />

    <RelativeLayout
        android:id="@+id/view_layout"
        android:layout_width="match_parent"
        android:layout_height="500dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:orientation="horizontal">

            <FrameLayout
                android:id="@+id/master_video_layout"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/border_shape" />

            <FrameLayout
                android:id="@+id/first_video_layout"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/border_shape" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:layout_alignParentBottom="true"
            android:orientation="horizontal">

            <FrameLayout
                android:id="@+id/second_video_layout"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/border_shape" />

            <FrameLayout
                android:id="@+id/third_video_layout"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/border_shape" />
        </LinearLayout>
        
        <!-- 可以在这里添加控件 -->
             <!--  -->
		<include
        android:id="@+id/avchat_record_layout"
        layout="@layout/avchat_record_layout"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="15dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone" />
		
        <RelativeLayout
            android:id="@+id/calling_layout_video_function"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginTop="32px" >

            <com.wellav.dolphin.ui.ImageButtonText
                android:id="@+id/btn_calling_video_capture"
                style="@style/h13"
                android:layout_width="112px"
                android:layout_height="112px"
                android:layout_marginRight="16px"
                android:layout_toLeftOf="@+id/btn_call_record"
                android:onClick="onCaptureWnd"
                android:src="@drawable/micr_btn_selector"
                android:text="@string/screen_shot" />

            <com.wellav.dolphin.ui.ImageButtonText
                android:id="@+id/btn_call_record"
                style="@style/h13"
                android:layout_width="112px"
                android:layout_height="112px"
                android:layout_marginRight="8px"
                android:layout_toLeftOf="@+id/conf_members_add_img"
                android:src="@drawable/record_btn_selector"
                android:onClick="onRecordVideo"
                android:text="@string/make_vedio" />

            <com.wellav.dolphin.ui.ImageButtonText
                android:id="@+id/conf_members_add_img"
                style="@style/h13"
                android:layout_width="112px"
                android:layout_height="112px"
                android:layout_marginRight="16px"
                android:layout_toLeftOf="@+id/calling_img_audio_mute"
                android:onClick="onAddMember"
                android:src="@drawable/group_btn_selector"
                android:text="@string/group_chat" />

            <com.wellav.dolphin.ui.ImageButtonText
                android:id="@+id/calling_img_audio_mute"
                style="@style/h13"
                android:layout_width="112px"
                android:layout_height="112px"
                android:layout_marginRight="16px"
                android:layout_toLeftOf="@+id/calling_video_hangup"
                android:onClick="onMute"
                android:src="@drawable/micr_btn_selector"
                android:text="@string/no_sound" />

            <com.wellav.dolphin.ui.ImageButtonText
                android:id="@+id/calling_video_hangup"
                style="@style/h7"
                android:layout_width="112px"
                android:layout_height="112px"
                android:layout_alignParentRight="true"
                android:layout_marginRight="16px"
                android:onClick="onHangUp"
                android:src="@drawable/hangup_btn_selector"
                android:text="@string/hang_out" />
        </RelativeLayout>
       </RelativeLayout>
</LinearLayout>